@@ -1,4 +1,4 @@
-4.02.2+gc-patches-109
+4.02.3+dev3-2015-07-20
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
